2d convolution and touch up 1d convolution and makefile

--- a/conv/Makefile
+++ b/conv/Makefile
@@ -2,7 +2,7 @@
 CC = g++
 CFLAGS = -I/usr/local/cuda-12.3/targets/x86_64-linux/include -Iinclude -std=c++11
 LDFLAGS = -L/usr/lib/x86_64-linux-gnu -lOpenCL
-SRCS = main.cpp
+SRCS = 2dmain.cpp
 OBJS = $(SRCS:.cpp=.o)
 EXEC = main
 
@@ -20,6 +20,10 @@ $(EXEC): $(OBJS)
 # Clean up build files
 clean:
 	rm -f $(OBJS) $(EXEC)
+
+# Run rule to execute the compiled program
+run: $(EXEC)
+	./$(EXEC)
 
 # Phony targets
 .PHONY: all clean
